# Jeff

./: .env.example  .gitignore  GmailService.py  README.md  brian.md  demo_queries.md  links.csv  pyproject.toml  random_stuff.py  sample.py  temp.py  temp2.py  test.py
RealJeff/Jeff/: ContentView.swift  Info.plist  Item.swift  Jeff.entitlements  JeffApp.swift
RealJeff/Jeff.xcodeproj/: project.pbxproj
RealJeff/JeffTests/: JeffTests.swift
RealJeff/JeffUITests/: JeffUITests.swift  JeffUITestsLaunchTests.swift
app/Jeff/Jeff/: ContentView.swift  JeffApp.swift
app/Jeff/Jeff.xcodeproj/: project.pbxproj
app/Jeff/JeffTests/: JeffTests.swift
app/Jeff/JeffUITests/: JeffUITests.swift  JeffUITestsLaunchTests.swift
docs/: setup.md
infra/: docker-compose.yml
jeff_storage/: brian.md
scripts/: ingest.py  populate_links_with_data.py  set_database_tables.py
server/: app.py  constants.py  db.sqlite  email.py  ingest.py  package.json  tsconfig.json
server/apis/: exa_client.py  openai_client.py
server/data_loaders/: files.py  gmail.py  history.py  link_contents.py
server/database/: db.py  queries.py  tables.py
server/embeddings/: embed.py
server/prisma/: schema.prisma
server/prisma/migrations/20240909154453_init/: migration.sql
server/src/: server.ts
server/src/dao/: emailDao.ts  embeddingDao.ts  fileDao.ts  linkDao.ts
server/src/scripts/: ingest.ts
server/src/services/: openai.ts
server/src/services/clients/: exa.ts  (+1 more)
server/src/utils/: container.ts
server/types/: email.py  file.py
server2/: app.py
server2/apis/: gmail_client.py  openai_client.py
server2/data_loaders/: files.py  gmail.py
server2/database/: queries.py  tables.py
server2/embeddings/: embed.py
(+6 files in other folders)
